--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,7 @@
     "statusBarItem.hoverBackground": "#f66345",
     "statusBar.foreground": "#e7e7e7",
     "activityBar.activeBackground": "#f66345",
-    "activityBar.activeBorder": "#0cf333",
-    "statusBar.border": "#f43a14",
-    "titleBar.border": "#f43a14"
+    "activityBar.activeBorder": "#0cf333"
   },
   "peacock.color": "#f43a14"
 }
